[package]
name = "dotstar"
version = "0.1.0"
edition = "2021"
authors = ["Austin McElroy <me@austin.engineer>"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libm = "0.2"
heapless = "0.8.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3.77", optional = true }
spin = { version = "0.5.2", optional = true }
lazy_static = { version = "1.5.0", features = ["spin_no_std"], optional = true }
rand = { version = "0.9.1", features = ["small_rng"], default-features = false }

[dev-dependencies]
assert_approx_eq = "1.1.0"

[features]
default = []
wasm = ["js-sys", "lazy_static", "wasm-bindgen", "spin"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "abort"